styles-fix: headers arrows kept aligned with text

--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,6 @@
     box-sizing:border-box;
     margin:0;
     padding:0;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none
 }
 
 body {
@@ -82,6 +78,10 @@ th, td {
   text-align: left;
 }
 
+th {
+  white-space:nowrap
+}
+
 tbody tr:nth-child(odd) {
   background: #32496031;
 }
@@ -99,6 +99,10 @@ tbody tr:nth-child(odd) {
   -webkit-box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
           box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
   cursor: pointer;
+}
+
+.paginated-react-table__btn:hover {
+  background-color: #394e6272;
 }
 
 .paginated-react-table__page-number, .paginated-react-table__page-number--current {
